--- a/spaceship.htm
+++ b/spaceship.htm
@@ -315,8 +315,7 @@
 
             //heightfield = new Heightfield();
             background = new Background();
-            spaceship = new Model('models/plane.obj');
-            spaceship = new Model('models/plane.obj');
+            spaceship = new Model('models/spaceship.obj');
             shootSample = new Splat(tex);
 
             // la couleur de fond sera grise foncée
