--- a/spaceship.htm
+++ b/spaceship.htm
@@ -140,9 +140,19 @@
 	void main(void) {
 		// la couleur est attribuee au fragment courant
 		vec3 n = normalize(vNormal);
+		vec3 v = vec3(0.0,0.0,-1.0);
+		vec3 l = normalize(vec3(-0.2,0.0,1.0));
+		vec3 r = reflect(-l,n);
+
+		float s = 50.0;
+
+		vec3 Kd = vec3(.2,0.6,1.0);
+		vec3 Ks = vec3(1.0);
+		float diff = max(dot(l,n),0.0);
+		float spec = pow(max(dot(r,v),0.0),s);
 
 		// pour le moment, on affiche juste la normale
-		outColor = vec4(n, 1.);
+		outColor = vec4(Kd*diff + Ks*spec, 1.0);
 	}
 
 	</script>
