Set flappy bird

--- a/spaceship.htm
+++ b/spaceship.htm
@@ -317,7 +317,7 @@
             initGL(canvas);
 
             // test: création d'une texture
-            var tex = initTexture('textures/missile.png');
+            var tex = initTexture('textures/bird.png');
 
             initBackgroundShader();
             initModelShader();
