--- a/spaceship.htm
+++ b/spaceship.htm
@@ -76,8 +76,9 @@
 		// vous pouvez modifier cette fonction comme vous
 		// le souhaitez pour fabriquer votre propre background
 		float noise = fractalNoise(p)*0.5+0.5;
-		if (noise < -.8) {
-			noise = 0.;
+		float alt = -.3;
+		if (noise <= alt) {
+			noise = .1*noise + alt;
 		}
 		return noise;
 	}
@@ -89,7 +90,7 @@
 		float yp = computeHeight(p+vec2(0.0, 0.001));
 		float ym = computeHeight(p+vec2(0.0, -0.001));
 
-		float gx = 0.1*(xp-xm)*scale;
+		float gx = 0.3*(xp-xm)*scale;
 		float gy = 0.5*(yp-ym)*scale;
 
 		vec3 v1 = normalize(vec3(1.0, 0.0, gx));
@@ -105,11 +106,23 @@
 		float d = computeHeight(p);// profondeur au point p
 		vec3 n = computeNormal(p);// normale au point p
 
+		vec3 vert = vec3(.4,.8,.3);
+		vec3 bleu = vec3(.1,.3,.8);
+		vec3 blanc = vec3(1.,1.,1.);
 		// affichage de la profondeur
 		// outColor = vec4(d, d, d, 10.0);
 
 		// affichage de la normale
-		outColor = vec4(n,1);
+
+		// de l'eau si inferieur à altitude de la mer
+		if (d <= -.3) {
+			outColor = vec4(bleu*n[1]*n[2]+bleu/2.,1.);
+		// de l'herbe sinon
+		} else if (d <= 1.5) {
+			outColor = vec4(vert*n[1]*n[2]+vert/2.,1.);
+		} else {
+			outColor = vec4(blanc*n[1]*n[2]+blanc/2.,1.);
+		}
 //		float test1 = sin(vTextureCoord.x*50.);
 //		float test2 = sin(vTextureCoord.y*50.);
 //
