--- a/spaceship.htm
+++ b/spaceship.htm
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="fbo.js"></script>
 	<script type="text/javascript" src="background.js"></script>
 	<script type="text/javascript" src="modelObj.js"></script>
+	<script type="text/javascript" src="enemyObj.js"></script>
 	<script type="text/javascript" src="splat.js"></script>
 
 	<script id="background-vs" type="x-shader/x-vertex">#version 300 es
@@ -181,6 +182,52 @@
 
 	</script>
 
+	<script id="enemy-vs" type="x-shader/x-vertex">#version 300 es
+	// *** le vertex shader ***
+	layout(location=0) in vec3 aVertexPosition;
+	layout(location=1) in vec3 aVertexNormal;
+
+	uniform mat4 uModelMatrixEnemy;
+	uniform mat4 uViewMatrixEnemy;
+	uniform mat4 uProjMatrixEnemy;
+
+	out vec3 vNormal;
+
+	void main(void) {
+		// projection de la position
+		gl_Position = uProjMatrixEnemy * uViewMatrixEnemy * uModelMatrixEnemy * vec4(aVertexPosition, 1.0);
+		vNormal = mat3(inverse(transpose(uViewMatrixEnemy * uModelMatrixEnemy)))*normalize(aVertexNormal);
+	}
+
+	</script>
+
+	<script id="enemy-fs" type="x-shader/x-fragment">#version 300 es
+	// *** le fragment shader ***
+	precision mediump float;// precision des nombres flottant
+
+	in vec3 vNormal;
+	out vec4 outColor;
+
+	void main(void) {
+		// la couleur est attribuee au fragment courant
+		vec3 n = normalize(vNormal);
+		vec3 v = vec3(0.0,0.0,-1.0);
+		vec3 l = normalize(vec3(-0.2,0.0,1.0));
+		vec3 r = reflect(-l,n);
+
+		float s = 50.0;
+
+		vec3 Kd = vec3(.2,0.6,1.0);
+		vec3 Ks = vec3(1.0);
+		float diff = max(dot(l,n),0.0);
+		float spec = pow(max(dot(r,v),0.0),s);
+
+		// pour le moment, on affiche juste la normale
+		outColor = vec4(Kd*diff + Ks*spec, 1.0);
+	}
+
+	</script>
+
 	<script id="splat-vs" type="x-shader/x-vertex">#version 300 es
 	// *** le vertex shader ***
 	layout(location=0) in vec3 aVertexPosition;// la position du sommet
@@ -225,6 +272,7 @@
 
         var background;
         var spaceship;
+        var enemy;
         //var shootSample;
         var missilesArray= [];
 		var tex;
@@ -245,6 +293,10 @@
             gl.useProgram(spaceship.shader());
             spaceship.sendUniformVariables();
             spaceship.draw();
+
+            gl.useProgram(enemy.shader());
+            enemy.sendUniformVariables();
+            enemy.draw();
 
             // test pour afficher un splat quand on appuie sur espace
             gl.enable(gl.BLEND); // transparence activée
@@ -381,6 +433,7 @@
             //heightfield = new Heightfield();
             background = new Background();
             spaceship = new Model('models/spaceship.obj');
+            enemy = new Enemy('models/plane.obj');
             //shootSample = new Splat(tex);
 
             // la couleur de fond sera grise foncée
