--- a/spaceship.htm
+++ b/spaceship.htm
@@ -392,6 +392,8 @@
 
 			var p = enemy.getBBox(); // boite englobante du vaisseau sur l'écran
 			var x = (p[0][0] + p[1][0]) / 2;
+			var g = p[0][0];
+			var d = p[1][0];
 			var y = p[1][1];
 			var z = p[1][2] + 0.005; // profondeur du splat (juste derrière le vaisseau)
 
@@ -412,7 +414,7 @@
 					if(missile.position[1] > 1) {
 						missile.clear();
 					}
-					if(missile.position[1] >= y && enemy.loaded) {
+					if(missile.position[0] < g && missile.position[0] > d && missile.position[1] >= y && enemy.loaded) {
 						missile.clear();
 						enemy.clear();
 					}
