position depart ennemi en Y après intersection missile ennemi

--- a/spaceship.htm
+++ b/spaceship.htm
@@ -465,7 +465,7 @@
 						if (missile.position[0] < g && missile.position[0] > d && missile.position[1] >= y && enemy.loaded) {
 							missile.clear();
 							// enemy.clear();
-							enemy.position[1] = Math.floor(Math.random() * Math.floor(5));
+							enemy.position[1] = 6;
 						}
 
 					})
