--- a/spaceship.htm
+++ b/spaceship.htm
@@ -310,10 +310,6 @@
 				missile.draw();
 			})
 
-			/*gl.useProgram(shootSample.shader());
-			shootSample.sendUniformVariables();
-			shootSample.draw();*/
-
 			gl.disable(gl.BLEND); // transparence désactivée
 		}
 
@@ -358,7 +354,6 @@
 
 			if (currentlyPressedKeys[77]) { // M
 				// juste un test pour supprimer un splat (tir)
-				// shootSample.clear();
 
 				missilesArray.forEach(missile  => {
 					missile.clear();
@@ -382,7 +377,6 @@
 					missilesArray.push(missile);
 					lastTimeMissile = timeNow;
 				}
-				//shootSample.setPosition(x, y, z);
 			}
 
 		}
@@ -404,7 +398,6 @@
 
 		function log(test) {
 			timeNowLog = new Date().getTime();
-
 			if(timeNowLog - lastTimeLog > 1000) {
 				console.log('test ===', test);
 				lastTimeLog = timeNowLog;
@@ -412,7 +405,6 @@
 		}
 
 		function logPosition(testEnnemies) {
-
 			console.log('enemy.position[1] ===', testEnnemies);
 		}
 
@@ -439,7 +431,6 @@
 				enemiesArray.forEach(enemy => {
 					enemy.setParameters(elapsed);
 				})
-				//shootSample.setParameters(elapsed);
 
 				enemiesArray.forEach(enemy => {
 
@@ -456,35 +447,31 @@
 						enemy.clear();
 					}*/
 					missilesArray.forEach(missile => {
-						// var enemyPositionY = enemy.position[0];
 						missile.setParameters(elapsed);
 
 						if (missile.position[1] > 1) {
-							missile.clear(); // recycler
+							missile.clear();
 						}
 						if (missile.position[0] < g && missile.position[0] > d && missile.position[1] >= y && enemy.loaded) {
 							missile.clear();
-							// enemy.clear();
 							enemy.position[1] = 6;
 						}
 
 					})
 
-					// TODO Trouver la position où l'ennemi sort de l'écran pour le clear et créer d'autres ennemis
+					// si ennemi sort de l'écran recycler sa position
 					if (enemy.position[1] < -7) {
-						// enemy.clear();
 						enemy.position[0] = positionXAleatoire(-4, 4);
 						enemy.position[1] = 6;
 					}
 
-					// TODO si clear un enemy en ajouter un
+					// si nombre enemy array inférieur à 5 create ennemy
 					if (enemiesArray.length < maxEnnemyCounnt) {
 						enemiesArray.push(createEnnemyRandomPosition());
 					}
 				})
 
 				missilesArray = missilesArray.filter(missile => missile.loaded)
-				// enemiesArray = enemiesArray.filter(missile => missile.loaded)
 			}
 			lastTime = timeNow;
 		}
@@ -514,9 +501,7 @@
 			//heightfield = new Heightfield();
 			background = new Background();
 			spaceship = new Model('models/spaceship.obj');
-			// var enemy = new Enemy('models/plane.obj', 0, 2, -2);
 
-			// enemy = new Enemy('models/plane.obj');
 			enemiesArray.push(createEnnemyRandomPosition());
 			enemiesArray.push(createEnnemyRandomPosition());
 			enemiesArray.push(createEnnemyRandomPosition());
